[gd_scene load_steps=9 format=2]

[ext_resource path="res://Objects/Selection Screen.gd" type="Script" id=1]
[ext_resource path="res://res/Main Menu.tres" type="DynamicFont" id=2]
[ext_resource path="res://Objects/WorldEnvironment.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Difficulty.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Retro Slider.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/RetroToggleButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://res/btngrp_player.tres" type="ButtonGroup" id=7]
[ext_resource path="res://Objects/RetroButton.tscn" type="PackedScene" id=8]

[node name="Selection Screen" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="." index="0"]

modulate = Color( 1, 0, 0.773438, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "Choose your destiny!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="WorldEnvironment" parent="." index="1" instance=ExtResource( 3 )]

[node name="Difficulty" parent="." index="2" instance=ExtResource( 4 )]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -678.0
margin_top = -32.0
margin_right = -638.0
margin_bottom = 8.0
focus_mode = 2
_sections_unfolded = [ "Focus" ]

[node name="PointsToWin" parent="." index="3" instance=ExtResource( 5 )]

modulate = Color( 0, 1, 0.179688, 1 )
margin_left = 374.0
margin_top = 201.0
margin_right = 882.0
margin_bottom = 278.0
focus_next = NodePath("../1 Player")
focus_previous = NodePath("../Play")
min_value = 5.0
max_value = 50.0
value = 5.0
_sections_unfolded = [ "Focus", "Visibility", "custom_icons", "custom_styles" ]

[node name="1 Player" parent="." index="4" instance=ExtResource( 6 )]

modulate = Color( 1, 0.466667, 0, 1 )
margin_left = 909.0
margin_top = 275.0
margin_right = 1167.0
margin_bottom = 355.0
focus_next = NodePath("../2 Player")
focus_previous = NodePath("../PointsToWin")
group = ExtResource( 7 )
_sections_unfolded = [ "Focus", "Textures", "Visibility" ]

[node name="2 Player" parent="." index="5" instance=ExtResource( 6 )]

modulate = Color( 1, 0.46875, 0, 1 )
margin_left = 909.0
margin_top = 389.0
margin_right = 1167.0
margin_bottom = 469.0
focus_next = NodePath("../Difficulty")
focus_previous = NodePath("../1 Player")
group = ExtResource( 7 )
_sections_unfolded = [ "Focus", "Rect", "Textures", "Visibility" ]

[node name="Play" parent="." index="6" instance=ExtResource( 8 )]

margin_left = 685.0
margin_top = 559.0
margin_right = 987.0
margin_bottom = 670.0

[connection signal="value_changed" from="PointsToWin" to="." method="_on_PointsToWin_value_changed"]

[connection signal="button_up" from="1 Player" to="." method="_on_1_Player_button_up"]

[connection signal="button_up" from="2 Player" to="." method="_on_2_Player_button_up"]

[connection signal="button_up" from="Play" to="." method="_on_Play_button_up"]


